Version 206: * Added clip list database views: "Person alerts", "Vehicle alerts", "Protected". * Changed AI-confirmed alerts icon to a green checkmark to better match Blue Iris local console. * Fixed bug where clip list auto refresh code would get stuck if there was a timespan of more then 24 hours between clips.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -2076,6 +2076,16 @@ div.invisibleLabel
 	padding-top: 2px;
 }
 
+.orangeIcon
+{
+	color: #FF5F00;
+}
+
+.greenIcon
+{
+	color: #64C35C;
+}
+
 /* Left Bar Checkboxes */
 .leftBarBool
 {
